--- a/app/src/main/res/layout/layout_login.xml
+++ b/app/src/main/res/layout/layout_login.xml
@@ -1,40 +1,44 @@
 <?xml version="1.0" encoding="utf-8"?>
 <android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent">
 
     <View
-          android:layout_width="match_parent"
-          android:layout_height="match_parent"
-          app:layout_constraintStart_toStartOf="parent"
-          app:layout_constraintLeft_toLeftOf="parent"
-          android:background="@drawable/login_background" />
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:background="@drawable/login_background"
+        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintStart_toStartOf="parent" />
+
     <android.support.constraint.Guideline
-            android:id="@+id/guide_login_vertical_left"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:orientation="vertical"
-            app:layout_constraintGuide_percent="0.2"/>
+        android:id="@+id/guide_login_vertical_left"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:orientation="vertical"
+        app:layout_constraintGuide_percent="0.2" />
+
     <android.support.constraint.Guideline
-            android:id="@+id/guide_login_vertical_right"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:orientation="vertical"
-            app:layout_constraintGuide_percent="0.8"/>
+        android:id="@+id/guide_login_vertical_right"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:orientation="vertical"
+        app:layout_constraintGuide_percent="0.8" />
+
     <android.support.constraint.Guideline
-            android:id="@+id/guide_login_vertical_left_pic"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:orientation="vertical"
-            app:layout_constraintGuide_percent="0.3"/>
+        android:id="@+id/guide_login_vertical_left_pic"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:orientation="vertical"
+        app:layout_constraintGuide_percent="0.3" />
+
     <android.support.constraint.Guideline
-            android:id="@+id/guide_login_horizontal_bottom"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:orientation="horizontal"
-            app:layout_constraintGuide_percent="0.85"/>
+        android:id="@+id/guide_login_horizontal_bottom"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:orientation="horizontal"
+        app:layout_constraintGuide_percent="0.85" />
+
     <TextView
         android:id="@+id/textView"
         android:layout_width="wrap_content"
@@ -52,30 +56,35 @@
         android:layout_height="wrap_content"
         android:orientation="horizontal"
         app:layout_constraintGuide_percent="0.2" />
+
     <android.support.constraint.Guideline
-            android:id="@+id/guide_login_horizontal_mid"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:orientation="horizontal"
-            app:layout_constraintGuide_percent="0.5"/>
+        android:id="@+id/guide_login_horizontal_mid"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:orientation="horizontal"
+        app:layout_constraintGuide_begin="320dp" />
 
     <ImageView
-            android:id="@+id/imageview_login_id_icon"
-            android:layout_width="0dp"
-            android:layout_height="wrap_content"
-            android:src="@drawable/login_id_icon"
-            app:layout_constraintTop_toBottomOf="@id/guide_login_horizontal_top"
-            app:layout_constraintLeft_toLeftOf="@id/guide_login_vertical_left"
-            app:layout_constraintRight_toRightOf="@id/guide_login_vertical_left_pic"/>
+        android:id="@+id/imageview_login_id_icon"
+        android:layout_width="0dp"
+        android:layout_height="0dp"
+        android:src="@drawable/login_id_icon"
+        app:layout_constraintDimensionRatio="W,1:1"
+        app:layout_constraintLeft_toLeftOf="@id/guide_login_vertical_left"
+        app:layout_constraintRight_toRightOf="@id/guide_login_vertical_left_pic"
+        app:layout_constraintTop_toBottomOf="@id/guide_login_horizontal_top" />
+
     <ImageView
-            android:id="@+id/imageview_login_pw_icon"
-            android:layout_width="0dp"
-            android:layout_height="wrap_content"
-            android:src="@drawable/login_pw_icon"
-            android:layout_marginTop="40dp"
-            app:layout_constraintTop_toBottomOf="@id/guide_login_horizontal_top"
-            app:layout_constraintLeft_toLeftOf="@id/guide_login_vertical_left"
-            app:layout_constraintRight_toRightOf="@id/guide_login_vertical_left_pic"/>
+        android:id="@+id/imageview_login_pw_icon"
+        android:layout_width="0dp"
+        android:layout_height="0dp"
+        android:src="@drawable/login_pw_icon"
+        android:layout_marginTop="40dp"
+        app:layout_constraintDimensionRatio="W,1:1"
+        app:layout_constraintLeft_toLeftOf="@id/guide_login_vertical_left"
+        app:layout_constraintRight_toRightOf="@id/guide_login_vertical_left_pic"
+        app:layout_constraintTop_toBottomOf="@id/guide_login_horizontal_top" />
+
     <EditText
         android:id="@+id/et_email"
         android:layout_width="wrap_content"
@@ -86,7 +95,7 @@
         android:text="ID"
         app:layout_constraintLeft_toRightOf="@id/imageview_login_id_icon"
         app:layout_constraintRight_toRightOf="@id/guide_login_vertical_right"
-        app:layout_constraintTop_toTopOf="@id/imageview_login_id_icon"/>
+        app:layout_constraintTop_toTopOf="@id/imageview_login_id_icon" />
 
     <EditText
         android:id="@+id/et_password"
@@ -97,7 +106,7 @@
         android:text="password"
         app:layout_constraintLeft_toRightOf="@id/imageview_login_pw_icon"
         app:layout_constraintRight_toRightOf="@id/guide_login_vertical_right"
-        app:layout_constraintTop_toBottomOf="@id/et_email"/>
+        app:layout_constraintTop_toBottomOf="@id/et_email" />
 
     <ImageView
         android:id="@+id/btn_login"
@@ -121,19 +130,19 @@
         android:clickable="true"
         app:layout_constraintLeft_toLeftOf="@id/guide_login_vertical_left"
         app:layout_constraintRight_toRightOf="@id/guide_login_vertical_right"
-        app:layout_constraintTop_toBottomOf="@id/btn_login"/>
+        app:layout_constraintTop_toBottomOf="@id/btn_login" />
 
     <ImageView
-            android:id="@+id/btnForget"
-            android:layout_width="0dp"
-            android:layout_height="wrap_content"
-            android:onClick="onForget"
-            android:src="@drawable/login_forget_btn"
-            android:scaleType="fitStart"
-            android:text="FORGET YOUR PASSWORD?"
-            android:clickable="true"
-            app:layout_constraintLeft_toLeftOf="@id/guide_login_vertical_left"
-            app:layout_constraintRight_toRightOf="@id/guide_login_vertical_right"
-            app:layout_constraintTop_toBottomOf="@id/guide_login_horizontal_bottom"/>
+        android:id="@+id/btnForget"
+        android:layout_width="0dp"
+        android:layout_height="wrap_content"
+        android:onClick="onForget"
+        android:src="@drawable/login_forget_btn"
+        android:scaleType="fitStart"
+        android:text="FORGET YOUR PASSWORD?"
+        android:clickable="true"
+        app:layout_constraintLeft_toLeftOf="@id/guide_login_vertical_left"
+        app:layout_constraintRight_toRightOf="@id/guide_login_vertical_right"
+        app:layout_constraintTop_toBottomOf="@id/guide_login_horizontal_bottom" />
 
 </android.support.constraint.ConstraintLayout>
