--- a/app/src/main/res/layout/layout_login.xml
+++ b/app/src/main/res/layout/layout_login.xml
@@ -6,11 +6,18 @@
 
     <View
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:background="@drawable/login_background"
+        android:layout_height="0dp"
+        android:background="@drawable/login_mid_gradient"
         app:layout_constraintLeft_toLeftOf="parent"
-        app:layout_constraintStart_toStartOf="parent" />
-
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintBottom_toTopOf="@id/guide_login_horizontal_boundary"/>
+    <View
+        android:layout_width="match_parent"
+        android:layout_height="0dp"
+        android:background="@drawable/login_bottom_gradient"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintTop_toTopOf="@id/guide_login_horizontal_boundary"
+        app:layout_constraintLeft_toLeftOf="parent" />
     <android.support.constraint.Guideline
         android:id="@+id/guide_login_vertical_left"
         android:layout_width="wrap_content"
@@ -38,31 +45,43 @@
         android:layout_height="wrap_content"
         android:orientation="horizontal"
         app:layout_constraintGuide_percent="0.85" />
-
-    <TextView
-        android:id="@+id/textView"
+    <android.support.constraint.Guideline
+        android:id="@+id/guide_login_horizontal_boundary"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="---Sign in with---"
-        android:textAlignment="center"
-        android:textSize="15pt"
-        app:layout_constraintBottom_toTopOf="@id/guide_login_horizontal_top"
-        app:layout_constraintLeft_toLeftOf="@id/guide_login_vertical_left"
-        app:layout_constraintRight_toRightOf="@id/guide_login_vertical_right" />
-
+        android:orientation="horizontal"
+        app:layout_constraintGuide_percent="0.80" />
+    <android.support.constraint.Guideline
+        android:id="@+id/guide_login_horizontal_edit_text"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:orientation="horizontal"
+        app:layout_constraintGuide_percent="0.25" />
     <android.support.constraint.Guideline
         android:id="@+id/guide_login_horizontal_top"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:orientation="horizontal"
-        app:layout_constraintGuide_percent="0.2" />
-
+        app:layout_constraintGuide_percent="0.15" />
     <android.support.constraint.Guideline
         android:id="@+id/guide_login_horizontal_mid"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:orientation="horizontal"
-        app:layout_constraintGuide_begin="320dp" />
+        app:layout_constraintGuide_percent="0.45" />
+
+    <TextView
+        android:id="@+id/textView"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="── Sign in with ──"
+        android:textAlignment="center"
+        android:textSize="14pt"
+        app:layout_constraintBottom_toTopOf="@id/guide_login_horizontal_top"
+        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintRight_toRightOf="parent" />
+
+
 
     <ImageView
         android:id="@+id/imageview_login_id_icon"
@@ -72,30 +91,28 @@
         app:layout_constraintDimensionRatio="W,1:1"
         app:layout_constraintLeft_toLeftOf="@id/guide_login_vertical_left"
         app:layout_constraintRight_toRightOf="@id/guide_login_vertical_left_pic"
-        app:layout_constraintTop_toBottomOf="@id/guide_login_horizontal_top" />
+        app:layout_constraintTop_toBottomOf="@id/guide_login_horizontal_edit_text" />
 
     <ImageView
         android:id="@+id/imageview_login_pw_icon"
         android:layout_width="0dp"
         android:layout_height="0dp"
         android:src="@drawable/login_pw_icon"
-        android:layout_marginTop="40dp"
         app:layout_constraintDimensionRatio="W,1:1"
         app:layout_constraintLeft_toLeftOf="@id/guide_login_vertical_left"
         app:layout_constraintRight_toRightOf="@id/guide_login_vertical_left_pic"
-        app:layout_constraintTop_toBottomOf="@id/guide_login_horizontal_top" />
+        app:layout_constraintTop_toBottomOf="@id/imageview_login_id_icon" />
 
     <EditText
         android:id="@+id/et_email"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="55dp"
         android:ems="10"
         android:inputType="textEmailAddress"
         android:text="ID"
         app:layout_constraintLeft_toRightOf="@id/imageview_login_id_icon"
         app:layout_constraintRight_toRightOf="@id/guide_login_vertical_right"
-        app:layout_constraintTop_toTopOf="@id/imageview_login_id_icon" />
+        app:layout_constraintTop_toBottomOf="@id/guide_login_horizontal_edit_text" />
 
     <EditText
         android:id="@+id/et_password"
@@ -111,7 +128,8 @@
     <ImageView
         android:id="@+id/btn_login"
         android:layout_width="0dp"
-        android:layout_height="wrap_content"
+        android:layout_height="0dp"
+        app:layout_constraintDimensionRatio="W,1:4"
         android:onClick="onLogin"
         android:text="LOGIN"
         android:src="@drawable/login_login_btn"
@@ -123,7 +141,8 @@
     <ImageView
         android:id="@+id/btnAccount"
         android:layout_width="0dp"
-        android:layout_height="wrap_content"
+        android:layout_height="0dp"
+        app:layout_constraintDimensionRatio="W,1:4"
         android:onClick="onRegister"
         android:text="NEW ACCOUNT"
         android:src="@drawable/login_register_btn"
@@ -135,10 +154,10 @@
     <ImageView
         android:id="@+id/btnForget"
         android:layout_width="0dp"
-        android:layout_height="wrap_content"
+        android:layout_height="0dp"
+        app:layout_constraintDimensionRatio="W,1:4"
         android:onClick="onForget"
         android:src="@drawable/login_forget_btn"
-        android:scaleType="fitStart"
         android:text="FORGET YOUR PASSWORD?"
         android:clickable="true"
         app:layout_constraintLeft_toLeftOf="@id/guide_login_vertical_left"
